Actions
Bug #11312
closeddladm: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with NULL pointer:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from dladm.c:27: /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ dladm.c:573:10: note: in expansion of macro 'NULL' { NULL, NULL, 0, 0 } ^~~~ /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: note: (near initialization for 'bridge_lopts[8].has_arg') #define NULL ((void *)0) ^ dladm.c:573:10: note: in expansion of macro 'NULL' { NULL, NULL, 0, 0 } ^~~~ /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ dladm.c:838:13: note: in expansion of macro 'NULL' { NULL, 0, NULL, 0}} ^~~~ /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: note: (near initialization for 'phys_fields[7].of_id') #define NULL ((void *)0) ^ dladm.c:838:13: note: in expansion of macro 'NULL' { NULL, 0, NULL, 0}} ^~~~ dladm.c: In function 'parse_wlan_keys': dladm.c:6190:24: error: comparison between pointer and integer [-Werror] while ((c = *token++) != NULL) { ^~ dladm.c: In function 'do_delete_secobj': dladm.c:7375:24: error: comparison between pointer and integer [-Werror] while ((c = *token++) != NULL) { ^~ dladm.c: In function 'do_show_secobj': dladm.c:7528:25: error: comparison between pointer and integer [-Werror] while ((c = *token++) != NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ff8e166f73f3bfaeac25d65662c6469130892500
commit ff8e166f73f3bfaeac25d65662c6469130892500 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-06T14:29:02.000Z 11312 dladm: NULL pointer errors Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Garrett D'Amore <garrett@damore.org>
Actions