usr/src/cmd/dladm/dladm.c
@@ -423,7 +423,7 @@ static const struct option lopts[] = {
 	{"bw-limit",	required_argument,	0, 'b'},
 	{"mac-address",	required_argument,	0, 'm'},
 	{"slot",	required_argument,	0, 'n'},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option show_lopts[] = {
@@ -436,7 +436,7 @@ static const struct option show_lopts[] = {
 	{"output",	required_argument,	0, 'o'},
 	{"persistent",	no_argument,		0, 'P'},
 	{"lacp",	no_argument,		0, 'L'},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option iptun_lopts[] = {
@@ -447,7 +447,7 @@ static const struct option iptun_lopts[] = {
 	{"parsable",	no_argument,		0, 'p'},
 	{"parseable",	no_argument,		0, 'p'},
 	{"persistent",	no_argument,		0, 'P'},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static char * const iptun_addropts[] = {
@@ -475,7 +475,7 @@ static const struct option prop_longopts[] = {
 	{"parsable",	no_argument,		0, 'c'  },
 	{"parseable",	no_argument,		0, 'c'  },
 	{"persistent",	no_argument,		0, 'P'  },
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option wifi_longopts[] = {
@@ -495,7 +495,7 @@ static const struct option wifi_longopts[] = {
 	{"root-dir",	required_argument,	0, 'R'  },
 	{"persistent",	no_argument,		0, 'P'  },
 	{"file",	required_argument,	0, 'f'  },
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option showeth_lopts[] = {
@@ -503,7 +503,7 @@ static const struct option showeth_lopts[] = {
 	{"parseable",	no_argument,		0, 'p'	},
 	{"extended",	no_argument,		0, 'x'	},
 	{"output",	required_argument,	0, 'o'	},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option vnic_lopts[] = {
@@ -517,7 +517,7 @@ static const struct option vnic_lopts[] = {
 	{"mac-prefix",	required_argument,	0, 'r'	},
 	{"vrid",	required_argument,	0, 'V'	},
 	{"address-family",	required_argument,	0, 'A'	},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option part_lopts[] = {
@@ -527,7 +527,7 @@ static const struct option part_lopts[] = {
 	{"force",	no_argument,		0, 'f'  },
 	{"root-dir",	required_argument,	0, 'R'  },
 	{"prop",	required_argument,	0, 'p'  },
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option show_part_lopts[] = {
@@ -536,13 +536,13 @@ static const struct option show_part_lopts[] = {
 	{"link",	required_argument,	0, 'l'  },
 	{"persistent",	no_argument,		0, 'P'  },
 	{"output",	required_argument,	0, 'o'  },
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option etherstub_lopts[] = {
 	{"temporary",	no_argument,		0, 't'	},
 	{"root-dir",	required_argument,	0, 'R'	},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option usage_opts[] = {
@@ -550,7 +550,7 @@ static const struct option usage_opts[] = {
 	{"format",	required_argument,	0, 'F'	},
 	{"start",	required_argument,	0, 's'	},
 	{"stop",	required_argument,	0, 'e'	},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option simnet_lopts[] = {
@@ -558,7 +558,7 @@ static const struct option simnet_lopts[] = {
 	{"root-dir",	required_argument,	0, 'R'	},
 	{"media",	required_argument,	0, 'm'	},
 	{"peer",	required_argument,	0, 'p'	},
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option bridge_lopts[] = {
@@ -570,7 +570,7 @@ static const struct option bridge_lopts[] = {
 	{ "link",		required_argument,	0, 'l'	},
 	{ "max-age",		required_argument,	0, 'm'	},
 	{ "priority",		required_argument,	0, 'p'	},
-	{ NULL, NULL, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 static const struct option bridge_show_lopts[] = {
@@ -582,7 +582,7 @@ static const struct option bridge_show_lopts[] = {
 	{ "parseable",	no_argument,		0, 'p' },
 	{ "statistics",	no_argument,		0, 's' },
 	{ "trill",	no_argument,		0, 't' },
-	{ 0, 0, 0, 0 }
+	{ NULL, 0, NULL, 0 }
 };
 
 /*
@@ -835,7 +835,7 @@ static const ofmt_field_t phys_fields[] = {
 	offsetof(link_fields_buf_t, link_phys_device), print_default_cb},
 { "FLAGS",	7,
 	offsetof(link_fields_buf_t, link_flags), print_default_cb},
-{ NULL,		0, NULL, 0}}
+{ NULL,		0, 0, NULL}}
 ;
 
 /*
@@ -6187,7 +6187,7 @@ parse_wlan_keys(char *str, dladm_wlan_key_t **keys, uint_t *key_countp)
 	char			*field, *token, *lasts = NULL, c;
 
 	token = str;
-	while ((c = *token++) != NULL) {
+	while ((c = *token++) != '\0') {
 		if (c == ',')
 			nfields++;
 	}
@@ -7372,7 +7372,7 @@ do_delete_secobj(int argc, char **argv, const char *use)
 		die("secure object name required");
 
 	token = argv[optind];
-	while ((c = *token++) != NULL) {
+	while ((c = *token++) != '\0') {
 		if (c == ',')
 			nfields++;
 	}
@@ -7525,7 +7525,7 @@ do_show_secobj(int argc, char **argv, const char *use)
 		token = argv[optind];
 		if (token == NULL)
 			die("secure object name required");
-		while ((c = *token++) != NULL) {
+		while ((c = *token++) != '\0') {
 			if (c == ',')
 				obj_fields++;
 		}
